--- a/index.html
+++ b/index.html
@@ -116,18 +116,13 @@
         a::after{
             color: black;
         }
-        h3{
-            font-size: 12px;
-            margin-bottom: 10%;
-            margin-left: 100px;
-            position: relative;
-            top: -90px;
-        }
         a > p{
             font-size: 13px;
-            margin-left: 100px;
+            display: block;
             position: relative;
-            top: -110px;
+            margin-top: -83px;
+            margin-left: 100px;
+
         }
         a > img{
             height: 40px;
@@ -180,9 +175,8 @@
         <a href="http://instagram.com/fernandabracht">
             <img src="instagram.png" alt="instagram icon">
             <img class="divisoria" src="linha.png" alt="divisoria">
-            <h3>Nos siga nas redes sociais!</h3>
-            <p>Fernanda Bracht (@fernandabracht)</p>
-            
+            <p><strong>Nos siga nas redes sociais!</strong><br><br>
+            Fernanda Bracht (@fernandabracht)</p>
         </a>
     </main>
 
