--- a/index.html
+++ b/index.html
@@ -139,10 +139,15 @@
         }
         footer{
             background-color: white;
+            box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.062);
+            padding-right: 10px;
+            padding-left: 10px;
+            height: 40px;
         }
         footer > p{
             font-size:12px;
             text-align: center;
+            padding-top: 12px;
         }
         footer > p > em > a{
             text-decoration: none;
@@ -194,7 +199,10 @@
     </main>
 
    <footer>
-        <p><em><a href="http://instagram.com/fernandabracht">Design and developed by Fernanda Bracht</a></em></p>
+        <p><em><a 
+            href="http://instagram.com/fernandabracht">Design and developed by 
+            <strong>Fernanda Bracht</strong>
+        </a></em></p>
    </footer> 
 </body>
 </html>
