--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             display: block;
             position: relative;
             margin-left: 15px;
-            margin-top: -20px;
+            margin-top: -22px;
         }        
         h1{
             text-align: center;
@@ -120,9 +120,10 @@
             font-size: 13px;
             display: block;
             position: relative;
-            margin-top: -83px;
+            margin-top: -88px;
             margin-left: 100px;
-
+            line-height: 20px;
+            white-space: nowrap;
         }
         a > img{
             height: 40px;
@@ -137,6 +138,7 @@
             margin-left: 30px;
             top: -30px;
         }
+        /*footer*/
         footer{
             background-color: white;
             box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.062);
@@ -193,14 +195,14 @@
         <a href="http://instagram.com/fernandabracht">
             <img src="instagram.png" alt="instagram icon">
             <img class="divisoria" src="linha.png" alt="divisoria">
-            <p><strong>Nos siga nas redes sociais!</strong><br><br>
-            Fernanda Bracht (@fernandabracht)</p>
+            <p><strong>Nos siga nas redes sociais!</strong><br>
+            Fernanda Bracht (@fernandabracht) •<br> Instagram fotos e vídeos</p>
         </a>
     </main>
 
    <footer>
         <p><em><a 
-            href="http://instagram.com/fernandabracht">Design and developed by 
+            href="http://instagram.com/fernandabracht"><strong>Menudo</strong> designed and developed by 
             <strong>Fernanda Bracht</strong>
         </a></em></p>
    </footer> 
