--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         .primeiro{
             margin-top: 50px;
         }
-        .galeria > li > a > img{
+        .galeria > li > img{
             width: 100%;
             height: auto;
             min-width: 280px;
@@ -194,34 +194,26 @@
         <h2>Indicações do Chef</h2>
         <div>
                 <ul class="galeria">
-                    <li><a href="prato1.html">
-                        <img src="1.png" alt="prato 1"></a>
+                    <li><img src="1.png" alt="prato 1">
+                        <h4>Nome do prato <span>R$49,90</span></h4>
+                        <p>Descrição do prato com todos os detalhes que
+                            fazem do prato o melhor da região.</p></li>
+                    <li><img src="2.png" alt="prato 2">
                             <h4>Nome do prato <span>R$49,90</span></h4>
                             <p>Descrição do prato com todos os detalhes que
                                fazem do prato o melhor da região.</p></li>
-                    <li><a href="prato2.html"><img src="2.png" alt="prato 2"></a>
+                    <li><img src="3.png" alt="prato 3">
                             <h4>Nome do prato <span>R$49,90</span></h4>
                             <p>Descrição do prato com todos os detalhes que
                                fazem do prato o melhor da região.</p></li>
-                   
-                    <li><a href="prato3.html">
-                        <img src="3.png" alt="prato 3"></a>
+                    <li><img src="4.png" alt="prato 4">
                             <h4>Nome do prato <span>R$49,90</span></h4>
                             <p>Descrição do prato com todos os detalhes que
-                               fazem do prato o melhor da região.</p>
-                    </li>
-                    <li><a href="prato4.html">
-                        <img src="4.png" alt="prato 4"></a>
+                               fazem do prato o melhor da região.</p></li>
+                    <li><img src="5.png" alt="prato 5">
                             <h4>Nome do prato <span>R$49,90</span></h4>
                             <p>Descrição do prato com todos os detalhes que
-                               fazem do prato o melhor da região.</p>
-                    </li>
-                    <li><a href="prato5.html">
-                        <img src="5.png" alt="prato 5"></a>
-                            <h4>Nome do prato <span>R$49,90</span></h4>
-                            <p>Descrição do prato com todos os detalhes que
-                               fazem do prato o melhor da região.</p>
-                    </li>
+                               fazem do prato o melhor da região.</p></li>
                 </ul>
         </div>
    </main>
