--- a/bebidas.html
+++ b/bebidas.html
@@ -7,8 +7,9 @@
     <title>Bebidas</title>
 
     <style>
- *{
-            font-family: Arial, Helvetica, sans-serif;
+         @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+        *{
+            font-family: 'Montserrat', sans-serif;
         }
         body{
             margin: 0px;
@@ -80,10 +81,11 @@
             border-radius: 20px;       
         }
         li{
-            padding: 10px;
+            padding: 10px 25px 10px;
             border: 1px solid rgba(211, 211, 211, 0.400);
             background-color: white;
             color: black;
+            font-size: 14px;
         }
         a{
             text-decoration: none;
@@ -134,12 +136,22 @@
             padding-right: 15px;
             background-color: white;
         }
-        span > span{
+        h2 > strong{
             font-size: 11px;
             font-weight: 600;    
             position: relative;
-            text-align: center;           
+            text-align: right;      
+            display: block;  
+            top: -11px;
         }
+        h2{
+            display: block;
+            position: relative;
+            top: 12px;
+            margin-bottom: -2px;
+            margin-top: -2px;
+        }
+
     </style>
 </head>
 <body>
@@ -173,7 +185,7 @@
                 <div class="lista">
                     <img src="drinks/1.png" alt="">
                     <span>
-                        <h2>Drink A</h2><span>R$49,90</span>
+                        <h2>Drink A<strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -184,7 +196,7 @@
                 <div class="lista">
                     <img src="drinks/2.png" alt="">
                     <span>
-                        <h2>Drink B</h2><span>R$49,90</span>
+                        <h2>Drink B<strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -195,7 +207,7 @@
                 <div class="lista">
                     <img src="drinks/3.png" alt="">
                     <span>
-                        <h2>Drink C <span>R$49,90</span></h2>
+                        <h2>Drink C <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -206,7 +218,7 @@
                 <div class="lista">
                     <img src="drinks/4.png" alt="">
                     <span>
-                        <h2>Drink D <span>R$49,90</span></h2>
+                        <h2>Drink D <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -217,7 +229,7 @@
                 <div class="lista">
                     <img src="drinks/5.png" alt="">
                     <span>
-                        <h2>Drink E <span>R$49,90</span></h2>
+                        <h2>Drink E <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -228,7 +240,7 @@
                 <div class="lista">
                     <img src="drinks/6.png" alt="">
                     <span>
-                        <h2>Drink F <span>R$49,90</span></h2>
+                        <h2>Drink F <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -244,7 +256,7 @@
                 <div class="lista">
                     <img src="cervejas/1.png" alt="">
                     <span>
-                        <h2>Cerveja A <span>R$49,90</span></h2>
+                        <h2>Cerveja A <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -255,7 +267,7 @@
                 <div class="lista">
                     <img src="cervejas/2.png" alt="">
                     <span>
-                        <h2>Cerveja B <span>R$49,90</span></h2>
+                        <h2>Cerveja B <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -266,7 +278,7 @@
                 <div class="lista">
                     <img src="cervejas/3.png" alt="">
                     <span>
-                        <h2>Cerveja C <span>R$49,90</span></h2>
+                        <h2>Cerveja C <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -277,7 +289,7 @@
                 <div class="lista">
                     <img src="cervejas/4.png" alt="">
                     <span>
-                        <h2>Cerveja D <span>R$49,90</span></h2>
+                        <h2>Cerveja D <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -288,7 +300,7 @@
                 <div class="lista">
                     <img src="cervejas/5.png" alt="">
                     <span>
-                        <h2>Cerveja E <span>R$49,90</span></h2>
+                        <h2>Cerveja E <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -304,7 +316,7 @@
                 <div class="lista">
                     <img src="vinhos/1.png" alt="">
                     <span>
-                        <h2>Vinho A <span>R$49,90</span></h2>
+                        <h2>Vinho A <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -315,7 +327,7 @@
                 <div class="lista">
                     <img src="vinhos/2.png" alt="">
                     <span>
-                        <h2>Vinho B <span>R$49,90</span></h2>
+                        <h2>Vinho B <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -326,7 +338,7 @@
                 <div class="lista">
                     <img src="vinhos/3.png" alt="">
                     <span>
-                        <h2>Vinho C <span>R$49,90</span></h2>
+                        <h2>Vinho C <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -340,7 +352,7 @@
                 <div class="lista">
                     <img src="naoalcoolicos/1.png" alt="">
                     <span>
-                        <h2>Água <span>R$49,90</span></h2>
+                        <h2>Água <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -351,7 +363,7 @@
                 <div class="lista">
                     <img src="naoalcoolicos/2.png" alt="">
                     <span>
-                        <h2>Refrigerante <span>R$49,90</span></h2>
+                        <h2>Refrigerante <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -362,7 +374,7 @@
                 <div class="lista">
                     <img src="naoalcoolicos/3.png" alt="">
                     <span>
-                        <h2>Suco Natural <span>R$49,90</span></h2>
+                        <h2>Suco Natural <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
@@ -373,7 +385,7 @@
                 <div class="lista">
                     <img src="naoalcoolicos/4.png" alt="">
                     <span>
-                        <h2>Chá Gelado <span>R$49,90</span></h2>
+                        <h2>Chá Gelado <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
