--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <title>Menudo</title>
     <style>
+       @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
         *{
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Montserrat', sans-serif;
         }
         body{
             margin: 0px;
@@ -108,7 +109,13 @@
             border: 1px solid rgba(211, 211, 211, 0.699);
         }
         h4 > span{
-            padding-left: 115px;
+            font-size: 11px;
+            font-weight: 800;    
+            position: relative;
+            text-align: right;      
+            display: block;  
+            top: -12px;
+            margin-bottom: -15px;
         }
 /*categorias*/
 
@@ -140,7 +147,7 @@
             color: black;
         }
         a > p{
-            font-size: 13px;
+            font-size: 12px;
             display: block;
             position: relative;
             margin-top: -88px;
