--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         }
 
 /*navegação*/
-        nav{
+       /* nav{
             box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.062);
             height: 35px;
-            background-color: rgba(255, 255, 255, 0.877);
+            background-color: rgba(255, 255, 255, 0.500);
             position: fixed;
             width: 100%;
             top: 0;
@@ -49,8 +49,12 @@
             margin: 0px;
             padding-top:10px;
             font-size: 15px;
+        }*/
+/*banner*/
+        .banner{
+            width: 100%;
+            margin-bottom: 0;
         }
-
 /*indicações do chef*/
         main{
             background-color: white;
@@ -59,7 +63,7 @@
             padding-left: 10px;
         }
         .primeiro{
-            margin-top: 50px;
+            margin-top: -20px;
         }
         .galeria > li > img{
             width: 100%;
@@ -114,7 +118,7 @@
             position: relative;
             text-align: right;      
             display: block;  
-            top: -12px;
+            top: -14px;
             margin-bottom: -15px;
         }
 /*categorias*/
@@ -192,10 +196,11 @@
 </head>
 <body>
    <header>
-        <nav>
+    <img class="banner" src="banner.png" alt="banner">
+        <!--<nav>
             <h1>Menudo</h1>
             <img src="icon.png" alt="menu"> 
-        </nav>
+        </nav>-->
    </header>
    <main class="primeiro">
         <h2>Indicações do Chef</h2>
