--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         .banner{
             width: 100%;
             margin-bottom: 0;
+            position: fixed;
+            z-index: -1;  
+            top: 0%;          
         }
 /*indicações do chef*/
         main{
@@ -63,7 +66,7 @@
             padding-left: 10px;
         }
         .primeiro{
-            margin-top: -20px;
+            margin-top: 160px;
         }
         .galeria > li > img{
             width: 100%;
