--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
         .banner{
             width: 100%;
             margin-bottom: 0;
-            position: fixed;
-            z-index: -1;  
-            top: 0%;          
+
         }
 /*indicações do chef*/
         main{
@@ -66,7 +64,7 @@
             padding-left: 10px;
         }
         .primeiro{
-            margin-top: 160px;
+            margin-top: -20px;
         }
         .galeria > li > img{
             width: 100%;
@@ -236,12 +234,12 @@
     <main class="segundo"> 
            <h2>Categorias</h2>
             <div class="menus">
-                        <a href="bebidas.html"><img src="Imagens PMG/1.png" alt=""></a>
-                        <a href="saladas.html"><img src="Imagens PMG/2.png" alt=""></a>
-                        <a href="entradas.html"><img src="Imagens PMG/3.png" alt=""></a>
-                        <a href="principais.html"><img src="Imagens PMG/4.png" alt=""></a>
-                        <a href="sobremesas.html"><img src="Imagens PMG/5.png" alt=""></a>
-                        <a href="porçoes.html"><img src="Imagens PMG/6.png" alt=""></a>  
+                        <a href="bebidas.html"><img src="imagens menu/1.png" alt=""></a>
+                        <a href="saladas.html"><img src="imagens menu/2.png" alt=""></a>
+                        <a href="entradas.html"><img src="imagens menu/3.png" alt=""></a>
+                        <a href="principais.html"><img src="imagens menu/4.png" alt=""></a>
+                        <a href="sobremesas.html"><img src="imagens menu/5.png" alt=""></a>
+                        <a href="porçoes.html"><img src="imagens menu/6.png" alt=""></a>  
             </div>
     </main>
     <main class="terceiro">
@@ -255,7 +253,7 @@
 
    <footer>
         <p><em><a 
-            href="http://instagram.com/fernandabracht"><strong>Menudo</strong> designed and developed by 
+            href="http://instagram.com/fernandabracht"><strong>Menudo</strong> is designed and developed by 
             <strong>Fernanda Bracht</strong>
         </a></em></p>
    </footer> 
