--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Menudo</title>
     <style>
        @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-        *{
+       @import url(quiche-display-black.ttf);
+       *{
             font-family: 'Montserrat', sans-serif;
         }
         body{
@@ -182,7 +183,7 @@
             height: 40px;
         }
         footer > p{
-            font-size:12px;
+            font-size:10px;
             text-align: center;
             padding-top: 12px;
         }
