--- a/bebidas.html
+++ b/bebidas.html
@@ -111,7 +111,8 @@
             font-size: 10px;
             text-align: left;
             max-width: 320px;
-            text-align: justify;
+            margin-top: 7px;
+            line-height: 10px;
         }
         div > img{
             width: fit-content;
@@ -135,6 +136,7 @@
             border: 1px solid rgba(211, 211, 211, 0.400);
             padding-right: 15px;
             background-color: white;
+            height: 103.5px;
         }
         h2 > strong{
             font-size: 11px;
@@ -142,7 +144,7 @@
             position: relative;
             text-align: right;      
             display: block;  
-            top: -11px;
+            top: -13px;
         }
         h2{
             display: block;
@@ -151,7 +153,26 @@
             margin-bottom: -2px;
             margin-top: -2px;
         }
-
+        /*footer*/
+        footer{
+            background-color: white;
+            box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.062);
+            padding-right: 10px;
+            padding-left: 10px;
+            height: 40px;
+        }
+        footer > p{
+            font-size:10px;
+            text-align: center;
+            padding-top: 12px;
+        }
+        footer > p > em > a{
+            text-decoration: none;
+            color: gray;
+        }
+        footer > p > em > a::after{
+            color: gray;
+        }
     </style>
 </head>
 <body>
@@ -398,7 +419,10 @@
 
     </main>
     <footer>
-
+        <p><em><a 
+            href="http://instagram.com/fernandabracht"><strong>Menudo</strong> is designed and developed by 
+            <strong>Fernanda Bracht</strong>
+        </a></em></p>
     </footer>
 </body>
 </html>
