--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         .galeria > li > img{
             width: 100%;
             height: auto;
-            min-width: 280px;
+            min-width: 250px;
             top: 0px; left: 0px;
             border-radius: 10px 10px 0px 0px; 
         }
@@ -57,7 +57,7 @@
             flex-flow: row nowrap;
             padding-left: 0%;
             padding-right: 0%;
-            gap: 15px;
+            gap: 5px;
         }
         .galeria{
             overflow-x: auto;
@@ -89,6 +89,7 @@
         li{
             border-radius: 10px;
             margin-bottom: 20px;
+            margin-left: 5px;
             box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.100);
             border: 1px solid rgba(211, 211, 211, 0.699);
         }
