--- a/saladas.html
+++ b/saladas.html
@@ -96,7 +96,7 @@
 
        }
         section > h1{
-            font-size: large;
+            font-size: 16px;
             padding-left: 10px;
             margin-top: 10px;
             margin-bottom: 13px;
