--- a/entradas.html
+++ b/entradas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
     <title>Bebidas</title>
 
     <style>
@@ -16,9 +17,7 @@
             padding: 0px;
             background-color: rgba(211, 211, 211, 0.151);
         }
-        body::-webkit-scrollbar{
-            display: none;
-        }
+       
         li{
             list-style: none;
         }        
@@ -137,6 +136,8 @@
             padding-right: 15px;
             background-color: white;
             height: 103.5px;
+            width: 309px;
+
         }
         h2 > strong{
             font-size: 11px;
@@ -233,6 +234,17 @@
                             Com ingredientes selecionados oferecemos a melhor experiência gastronômica da cidade. </p>
                     </span>
                 </div>
+            </span>
+        </div>
+        <div class="lista">
+            <img src="entradas/6.png" alt="">
+            <span>
+                <h2>Entrada F<strong>R$49,90</strong></h2>
+                <p>Entrada clássica da casa com o tempero secreto do Chef. 
+                    Com ingredientes selecionados oferecemos a melhor experiência gastronômica da cidade. </p>
+
+            </span>
+        </div>
         </section>
 
     </main>
