--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
     <title>Menudo</title>
     <style>
        @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -17,9 +17,7 @@
             padding: 0px;
             background-color: rgba(211, 211, 211, 0.151);
         }
-        body::-webkit-scrollbar{
-            display: none;
-        }
+    
         li{
             list-style: none;
         }        
