--- a/principais.html
+++ b/principais.html
@@ -121,7 +121,7 @@
         .lista{
             display: inline-flex;
         }
-        #content1, #content2, #content3, #content4  {
+        #content1, #content2, #content3, #content4, #content5 {
             position: absolute;
             width: 1px;
             height: 1px;
@@ -136,7 +136,7 @@
             padding-right: 15px;
             background-color: white;
             height: 103.5px;
-            width: 309px;
+            width: 100%;
 
         }
         h2 > strong{
@@ -193,26 +193,28 @@
                 <li>Carnes</li>
             </a>
             <a href="#content3">
-                <li>Vinhos</li>
+                <li>Frangos & Peixes</li>
             </a>
             <a href="#content4">
-                <li>Não-Alcoólicos</li>
+                <li>Hambúrgueres</li>
+            </a>
+            <a href="#content5">
+                <li>Vegetariano</li>
             </a>
         </ul>
         
         <section>
             <div id="content1"></div>
-                <h1>Drinks</h1>
+                <h1>Massas</h1>
 
                 <div class="lista">
                     <img src="drinks/1.png" alt="">
                     <span>
-                        <h2>Drink A<strong>R$49,90</strong></h2>
-                        <p>Descrição da bebida mais deliciosa do mundo,
-                            com os melhores ingredientes do mercado.
-                            Nossa receita contém componentes incríveis
-                            que fazem com que essa bebida seja a melhor escolha
-                            para todos os momentos.</p>
+                        <h2>Massa estilo A<strong>R$49,90</strong></h2>
+                        <p>Massa ao dente com molho especial da casa. Receita
+                           da família desde 1930, sendo criada pelos primeiros 
+                           de nossa família. 
+                        </p>
                     </span>
                 </div>
                 <div class="lista">
@@ -408,6 +410,19 @@
                     <img src="naoalcoolicos/4.png" alt="">
                     <span>
                         <h2>Chá Gelado <strong>R$49,90</strong></h2>
+                        <p>Descrição da bebida mais deliciosa do mundo,
+                            com os melhores ingredientes do mercado.
+                            Nossa receita contém componentes incríveis
+                            que fazem com que essa bebida seja a melhor escolha
+                            para todos os momentos.</p>
+                    </span>
+                </div>
+                <div id="content5"></div>
+                <h1>Vinhos</h1>
+                <div class="lista">
+                    <img src="vinhos/1.png" alt="">
+                    <span>
+                        <h2>Vinho A <strong>R$49,90</strong></h2>
                         <p>Descrição da bebida mais deliciosa do mundo,
                             com os melhores ingredientes do mercado.
                             Nossa receita contém componentes incríveis
