--- a/entradas.html
+++ b/entradas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
-    <title>Bebidas</title>
+    <title>Entradas</title>
 
     <style>
          @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -131,13 +131,11 @@
             z-index: -1;
         }
         div > span{
-            padding-left: 15px;
+            padding-left: 10px;
+            padding-right: 5px;
             border: 1px solid rgba(211, 211, 211, 0.400);
-            padding-right: 15px;
             background-color: white;
             height: 103.5px;
-            width: 309px;
-
         }
         h2 > strong{
             font-size: 11px;
