--- a/bebidas.html
+++ b/bebidas.html
@@ -131,12 +131,11 @@
             z-index: -1;
         }
         div > span{
-            padding-left: 15px;
+            padding-left: 10px;
+            padding-right: 5px;
             border: 1px solid rgba(211, 211, 211, 0.400);
-            padding-right: 15px;
             background-color: white;
             height: 103.5px;
-            width: 309px;
         }
         h2 > strong{
             font-size: 11px;
@@ -145,6 +144,7 @@
             text-align: right;      
             display: block;  
             top: -13px;
+            right: 15px;
         }
         h2{
             display: block;
