--- a/sobremesas.html
+++ b/sobremesas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
-    <title>Bebidas</title>
+    <title>Sobremesas</title>
 
     <style>
          @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@@ -131,13 +131,11 @@
             z-index: -1;
         }
         div > span{
-            padding-left: 15px;
+            padding-left: 10px;
+            padding-right: 5px;
             border: 1px solid rgba(211, 211, 211, 0.400);
-            padding-right: 15px;
             background-color: white;
             height: 103.5px;
-            width: 309px;
-
         }
         h2 > strong{
             font-size: 11px;
@@ -191,48 +189,38 @@
                 <h1>Saladas Especiais</h1>
 
                 <div class="lista">
-                    <img src="saladas/1.png" alt="">
+                    <img src="sobremesas/1.png" alt="">
                     <span>
                         <h2>Salada A<strong>R$49,90</strong></h2>
-                        <p>Salada com folhas selecionadas a dedo para você desfrutar
-                            da melhor combinação gastronômica orgânica. Folhas frescas e verdinhas
-                            de culturas regionais e verduras frescas do dia.</p>
+                        <p></p>
                     </span>
                 </div>
                 <div class="lista">
-                    <img src="saladas/2.png" alt="">
+                    <img src="sobremesas/2.png" alt="">
                     <span>
                         <h2>Salada B<strong>R$49,90</strong></h2>
-                        <p>Salada com folhas selecionadas a dedo para você desfrutar
-                            da melhor combinação gastronômica orgânica. Folhas frescas e verdinhas
-                            de culturas regionais e verduras frescas do dia.</p>
+                        <p></p>
                     </span>
                 </div>
                 <div class="lista">
-                    <img src="saladas/3.png" alt="">
+                    <img src="sobremesas/3.png" alt="">
                     <span>
                         <h2>Salada C<strong>R$49,90</strong></h2>
-                        <p>Salada com folhas selecionadas a dedo para você desfrutar
-                            da melhor combinação gastronômica orgânica. Folhas frescas e verdinhas
-                            de culturas regionais e verduras frescas do dia.</p>
+                        <p></p>
                     </span>
                 </div>
                 <div class="lista">
-                    <img src="saladas/4.png" alt="">
+                    <img src="sobremesas/4.png" alt="">
                     <span>
                         <h2>Salada D<strong>R$49,90</strong></h2>
-                        <p>Salada com folhas selecionadas a dedo para você desfrutar
-                            da melhor combinação gastronômica orgânica. Folhas frescas e verdinhas
-                            de culturas regionais e verduras frescas do dia.</p>
+                        <p></p>
                     </span>
                 </div>
                 <div class="lista">
-                    <img src="saladas/5.png" alt="">
+                    <img src="sobremesas/5.png" alt="">
                     <span>
                         <h2>Salada E<strong>R$49,90</strong></h2>
-                        <p>Salada com folhas selecionadas a dedo para você desfrutar
-                            da melhor combinação gastronômica orgânica. Folhas frescas e verdinhas
-                            de culturas regionais e verduras frescas do dia.</p>
+                        <p></p>
                     </span>
                 </div>
         </section>
