--- a/sobremesas.html
+++ b/sobremesas.html
@@ -132,7 +132,7 @@
         }
         div > span{
             padding-left: 10px;
-            padding-right: 5px;
+            padding-right: 14px;
             border: 1px solid rgba(211, 211, 211, 0.400);
             background-color: white;
             height: 103.5px;
@@ -144,6 +144,7 @@
             text-align: right;      
             display: block;  
             top: -13px;
+            right: 15px;
         }
         h2{
             display: block;
@@ -186,41 +187,56 @@
         
         <section>
             <div id="content1"></div>
-                <h1>Saladas Especiais</h1>
+                <h1>Sobremesas</h1>
 
                 <div class="lista">
                     <img src="sobremesas/1.png" alt="">
                     <span>
-                        <h2>Salada A<strong>R$49,90</strong></h2>
-                        <p></p>
+                        <h2>Sobremesa A<strong>R$49,90</strong></h2>
+                        <p>Sobremesa feita com chocolate importado da bélgica.
+                            Conhecido como melhor chocolate do mundo. A casa tem
+                            o prazer em servir essa delícia tradicinal.
+                        </p>
                     </span>
                 </div>
                 <div class="lista">
                     <img src="sobremesas/2.png" alt="">
                     <span>
-                        <h2>Salada B<strong>R$49,90</strong></h2>
-                        <p></p>
+                        <h2>Sobremesa B<strong>R$49,90</strong></h2>
+                        <p>Sobremesa feita com chocolate importado da bélgica.
+                            Conhecido como melhor chocolate do mundo. A casa tem
+                            o prazer em servir essa delícia tradicinal.
+                        </p>
                     </span>
                 </div>
                 <div class="lista">
                     <img src="sobremesas/3.png" alt="">
                     <span>
-                        <h2>Salada C<strong>R$49,90</strong></h2>
-                        <p></p>
+                        <h2>Sobremesa C<strong>R$49,90</strong></h2>
+                        <p>Sobremesa feita com chocolate importado da bélgica.
+                            Conhecido como melhor chocolate do mundo. A casa tem
+                            o prazer em servir essa delícia tradicinal.
+                        </p>
                     </span>
                 </div>
                 <div class="lista">
                     <img src="sobremesas/4.png" alt="">
                     <span>
-                        <h2>Salada D<strong>R$49,90</strong></h2>
-                        <p></p>
+                        <h2>Sobremesa D<strong>R$49,90</strong></h2>
+                        <p>Sobremesa feita com chocolate importado da bélgica.
+                            Conhecido como melhor chocolate do mundo. A casa tem
+                            o prazer em servir essa delícia tradicinal.
+                        </p>
                     </span>
                 </div>
                 <div class="lista">
                     <img src="sobremesas/5.png" alt="">
                     <span>
-                        <h2>Salada E<strong>R$49,90</strong></h2>
-                        <p></p>
+                        <h2>Sobremesa E<strong>R$49,90</strong></h2>
+                        <p>Sobremesa feita com chocolate importado da bélgica.
+                            Conhecido como melhor chocolate do mundo. A casa tem
+                            o prazer em servir essa delícia tradicinal.
+                        </p>
                     </span>
                 </div>
         </section>
