--- a/entradas.html
+++ b/entradas.html
@@ -132,7 +132,7 @@
         }
         div > span{
             padding-left: 10px;
-            padding-right: 5px;
+            padding-right: 14px;
             border: 1px solid rgba(211, 211, 211, 0.400);
             background-color: white;
             height: 103.5px;
@@ -144,6 +144,7 @@
             text-align: right;      
             display: block;  
             top: -13px;
+            right: 15px;
         }
         h2{
             display: block;
